--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
     Användarnamn: <input type="text" name="username"><br>
     Lösenord: &nbsp;<input type="password" name="password"><br>
     Adress: <input type="text" name="address"><br>
-    <input type="submit" value="Logga in">
+    <input type="submit" name="submit" value="Registrera">
 </form>
 
 </body>
