--- a/header.html
+++ b/header.html
@@ -33,18 +33,23 @@
 <h1>EITF05 Projekt - Grupp 18</h1>
 <ul>
     <li><a href="index.php">Start</a></li>
-    <li><a href="signup.php">Registrera</a></li>
 
     <?php
         if(isset($_SESSION['username'])){
 echo "<li><a href=\"signout.php\">Logga ut</a></li>";
     }else{
+    echo "<li><a href=\"signup.php\">Registrera</a></li>\n";
     echo "<li><a href=\"signin.php\">Logga in</a></li>\n";
     }
     ?>
 
     <li><a href="cart.php">Visa kundkorg</a></li>
 </ul>
+<?php
+if(isset($_SESSION['username'])){
+    echo "Du är inloggad som: " . $_SESSION['username'];
+}
+?>
 <br>
 
 
