produkter direkt från databasen
visar alla produkter som finns i databasen

--- a/header.html
+++ b/header.html
@@ -43,7 +43,7 @@ echo "<li><a href=\"signout.php\">Logga ut</a></li>";
     }
     ?>
 
-    <li><a href="cart.php">Visa kundkorg</a></li>
+    <li><a href="cart.php">Kundvagn</a></li>
 </ul>
 <?php
 if(isset($_SESSION['username'])){
