--- a/product.html
+++ b/product.html
@@ -9,8 +9,28 @@
 <p>Hej och välkommen till denna enkla webbshop.
 </p>
 <style type="text/css">
-    .tg  {border-collapse:collapse;border-spacing:0;border-color:#bbb;border-width:1px;border-style:solid;}
-    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#bbb;color:#594F4F;background-color:#E0FFEB;border-top-width:1px;border-bottom-width:1px;}
+    .tg {
+        border-collapse: collapse;
+        border-spacing: 0;
+        border-color: #bbb;
+        border-width: 1px;
+        border-style: solid;
+    }
+
+    .tg td {
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        padding: 10px 5px;
+        border-style: solid;
+        border-width: 0px;
+        overflow: hidden;
+        word-break: normal;
+        border-color: #bbb;
+        color: #594F4F;
+        background-color: #E0FFEB;
+        border-top-width: 1px;
+        border-bottom-width: 1px;
+    }
 </style>
 <table class="tg" style="undefined;table-layout: fixed; width: 282px">
     <colgroup>
@@ -28,15 +48,23 @@
 $query = mysqli_query($con, "select * from products");
 while ($row = mysqli_fetch_assoc($query)) {
     echo "<tr>\n";
-    echo "        <td class=\"tg-031e\">";
-    echo $row["NAME"];
-    echo "</td>\n";
-    echo "<td class=\"tg-031e\">";
-    echo $row["PRICE"];
-    echo "kr</td>\n";
-    echo "<td class=\"tg-031e\"><a href=\"cart.php?action=1&product=";
-                                   echo $row["ID"];
-    echo "\">Lägg till i kundvagnen</a></td>\n";
+    echo "
+    <td class=\"tg-031e\">";
+        echo $row["NAME"];
+        echo "
+    </td>
+    \n";
+    echo "
+    <td class=\"tg-031e\">";
+        echo $row["PRICE"];
+        echo "kr
+    </td>
+    \n";
+    echo "
+    <td class=\"tg-031e\"><a href=\"cart.php?action=1&product=";
+                             echo $row["ID"];
+        echo "\">Lägg till i kundvagnen</a></td>
+    \n";
     echo "</tr>\n";
     }
     ?>
