--- a/receipt.html
+++ b/receipt.html
@@ -11,8 +11,28 @@
 
 
 <style type="text/css">
-    .tg  {border-collapse:collapse;border-spacing:0;border-color:#bbb;border-width:1px;border-style:solid;}
-    .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#bbb;color:#594F4F;background-color:#E0FFEB;border-top-width:1px;border-bottom-width:1px;}
+    .tg {
+        border-collapse: collapse;
+        border-spacing: 0;
+        border-color: #bbb;
+        border-width: 1px;
+        border-style: solid;
+    }
+
+    .tg td {
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        padding: 10px 5px;
+        border-style: solid;
+        border-width: 0px;
+        overflow: hidden;
+        word-break: normal;
+        border-color: #bbb;
+        color: #594F4F;
+        background-color: #E0FFEB;
+        border-top-width: 1px;
+        border-bottom-width: 1px;
+    }
 </style>
 <table class="tg" style="undefined;table-layout: fixed; width: 282px">
     <colgroup>
@@ -32,19 +52,27 @@ if(isset($_SESSION['cart'])){
     while ($row = mysqli_fetch_assoc($query)) {
         if(in_array($row["ID"],$_SESSION['cart'])){
             echo "<tr>\n";
-    echo "        <td class=\"tg-031e\">";
-    echo $row["NAME"];
-    echo "</td>\n";
-    echo "<td class=\"tg-031e\">";
-    echo $row["PRICE"];
-    $total = $total + $row["PRICE"];
-    echo "kr</td>\n";
+    echo "
+    <td class=\"tg-031e\">";
+        echo $row["NAME"];
+        echo "
+    </td>
+    \n";
+    echo "
+    <td class=\"tg-031e\">";
+        echo $row["PRICE"];
+        $total = $total + $row["PRICE"];
+        echo "kr
+    </td>
+    \n";
     echo "</tr>\n";
     }
 
     }
 
-    echo "</table>";
+    echo "
+</table>
+";
 
 echo" <p>Följande belopp kommer att dras från ditt kort när varorna lämnar lager: ";
     echo $total;
