--- a/header.html
+++ b/header.html
@@ -38,8 +38,12 @@
         if(isset($_SESSION['username'])){
 echo "<li><a href=\"signout.php\">Logga ut</a></li>";
     }else{
-    echo "<li><a href=\"signup.php\">Registrera</a></li>\n";
-    echo "<li><a href=\"signin.php\">Logga in</a></li>\n";
+    echo "
+    <li><a href=\"signup.php\">Registrera</a></li>
+    \n";
+    echo "
+    <li><a href=\"signin.php\">Logga in</a></li>
+    \n";
     }
     ?>
 
